Add two new pages
- Movie Search
- Movie Details

--- a/src/styles/MovieCard.css
+++ b/src/styles/MovieCard.css
@@ -6,6 +6,10 @@
     text-align: center;
 }
 
+.movie-card:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
+
 .movie-card .movie-title {
     font-weight: bold;
 }
