--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 * { margin: 0; padding: 0; }
 
-body{        
-  padding-top: 80px;
+body {        
+  padding-top: 0px;
   padding-bottom: 60px;
+}
+
+main {
+  padding: 10px;
+}
+
+h1 {
+  padding: 20px;
 }
