--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,25 +1,75 @@
-.header {
-    padding: 1rem;
-    background-color: rgb(209, 209, 209);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
+/* Style the header with a grey background and some padding */
+header {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 0px 10px;
 }
 
-.header nav {
-    text-align: right;
+.logo {
+    width: auto;
+    height: 80px;
 }
 
-nav a{
-    color: rgb(38, 100, 148);
+/* Style the header links */
+header a {
+    float: left;
+    color: black;
+    text-align: center;
     text-decoration: none;
-    padding: 7px 25px;
-    display: inline-block;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    padding: 0px 10px;
+    height: 80px;
 }
 
-.header nav a:hover {
+/* Style the header links */
+nav a {
+    padding: 28px 40px;
+    height: auto;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+header a.logo {
+    font-size: 25px;
     font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+header a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Style the active/current link*/
+header a.active {
+    background-color: dodgerblue;
+    color: white;
+}
+
+/* Float the link section to the right */
+nav {
+    float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 820px) {
+    nav a {
+        padding: 28px 20px;
+    }
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 580px) {
+    header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    nav {
+        float: none;
+    }
+    nav a {
+        padding: 12px;
+    }
 }
