--- a/src/styles/MovieSearchForm.css
+++ b/src/styles/MovieSearchForm.css
@@ -1,6 +1,8 @@
 form {
     text-align: center;
-    margin: 15px 500px;
+    margin: 15px 100px;
+    width: auto;
+    position: relative;
 }
 
 .form__field {
@@ -27,4 +29,22 @@ form {
 
 .form__field:focus {
     box-shadow: 4px 2px 2px rgba(1, 1, 1, 0.500);
+}
+
+.clear_button {
+    position: absolute;
+    border-radius: 5px;
+    margin: 0px;
+    padding: 0px;
+    right: -25px;
+    top: 8px;
+    height: 30px;
+    width: 30px;
+    z-index: 2;
+    border: none;
+    height: 30px;
+    cursor: pointer;
+    color: black;
+    background-color: white;
+    transform: translateX(2px);
 }
