--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     margin-top: 1rem;
     padding: 1rem;
-    background-color: rgb(209, 209, 209);
+    background-color: #f1f1f1;
     position: fixed;
     bottom: 0;
     left: 0;
