--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -39,12 +39,14 @@ header a.logo {
 header a:hover {
     background-color: #ddd;
     color: black;
+    text-decoration: none;
 }
 
 /* Style the active/current link*/
 header a.active {
     background-color: dodgerblue;
     color: white;
+    text-decoration: none;
 }
 
 /* Float the link section to the right */
