--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     margin-top: 1rem;
-    padding: 1rem;
+    padding: 0.4rem 1rem 1rem 1rem;
     background-color: #f1f1f1;
     position: fixed;
     bottom: 0;
