--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -16,17 +16,21 @@ header a {
     color: black;
     text-align: center;
     text-decoration: none;
-    font-size: 18px;
-    line-height: 25px;
+    font-size: 16px;
+    font-weight: bold;
     border-radius: 4px;
     padding: 0px 10px;
-    height: 80px;
 }
 
 /* Style the header links */
 nav a {
-    padding: 28px 40px;
-    height: auto;
+    display: flex;
+    padding: 0px 40px;
+    line-height: 20px;
+    height: 80px;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
@@ -55,14 +59,14 @@ nav {
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1055px) {
     nav a {
-        padding: 28px 15px;
+        padding: 0px 15px;
     }
 }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
-@media screen and (max-width: 715px) {
+@media screen and (max-width: 805px) {
     header a {
         float: none;
         display: block;
@@ -73,5 +77,7 @@ nav {
     }
     nav a {
         padding: 12px;
+        height: 20px;
+        width: auto;
     }
 }
